# pomotodo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  vitest.config.js
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_task_note.py  0003_task_archived.py  0004_block_note.py  0005_block_archived.py  0006_break_state.py  0007_drop_block_archived.py  0008_block_task_nullable.py  0009_block_touches.py  0010_block_timer.py  0011_drop_blocks_override.py
app/: api.py  db.py  errors.py  main.py  models.py  repository.py  schemas.py  service.py
backend/: api.py  config.py  db.py  main.py  models.py  parser.py  repository.py  schemas.py  service.py
docker/: entrypoint.sh
docs/: timer-states.md
frontend/: app.js  helpers.js  i18n.js  index.html  style.css
frontend/sounds/: CREDITS.md
scripts/: fetch_sounds.sh  gen_sounds.py  seed.py
spec/001-pomotodo/: HANDOFF.md  TECH.md
specs/001-pomotodo/: PRODUCT.md
specs/20260613-2016-today-backlog-tags/: PRODUCT.md  TECH.md
static/: app.js  i18n.js  index.html  style.css
tests/: bh_buckets.py  bh_history.py  bh_i18n_notes.py  bh_task_crud.py  bh_timer_counts.py  e2e_buckets.js  e2e_history_delete.js  e2e_i18n_notes.js  e2e_task_crud.js  e2e_timer.js  test_block_delete.py  test_block_record.py  test_block_tasks.py  test_break_sync.py  test_bucket.py  test_history_delete.py  test_parser.py  test_taskless_block.py
(+157 files in other folders)
