[project]
name = "pomotodo"
version = "0.1.0"
description = "Local pomodoro + todo web app"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "sqlalchemy>=2.0.50",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.18.4",
    "pydantic-settings>=2.14.1",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
